--- a/WPFinterface/MainWindow.xaml
+++ b/WPFinterface/MainWindow.xaml
@@ -258,8 +258,8 @@
                 <ColumnDefinition Width="8*" />
             </Grid.ColumnDefinitions>
 
-            <Rectangle Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Stroke="Gray" Margin="0,0,0,10" Opacity="0.5"
-                       Fill="WhiteSmoke" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            <!--<Rectangle Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Stroke="Gray" Margin="0,0,0,10" Opacity="0.5"
+                       Fill="WhiteSmoke" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>-->
 
             <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Style="{StaticResource st_border}" Margin="10,0" >
 
@@ -273,10 +273,13 @@
                         <ColumnDefinition Width="8*" />
                     </Grid.ColumnDefinitions>
 
-                    <StackPanel Name="panel_LocalDbCaption" Grid.Row="0" Grid.Column="0" >
+                    <StackPanel Name="panel_LocalDbCaption" Grid.Row="0" Grid.Column="0" Orientation="Horizontal" >
+                        
                         <Label Content="Local Database" HorizontalAlignment="Center" 
                        FontSize="14" FontWeight="Medium" Foreground="#FF487DA2"
                        VerticalAlignment="Center"  />
+                        <TextBox Text="{Binding localDbNumberOfRecords }" ToolTip="Number of inserted records" IsReadOnly="True"
+                                 HorizontalContentAlignment="Center" FontSize="14" Width="Auto" Height="22" Margin="10,0,0,0"/>
                     </StackPanel>
 
                     <StackPanel Name="panel_MonitorControls" Grid.Row="0" Grid.Column="1"  Orientation="Horizontal" Margin="0,0" VerticalAlignment="Center"    >
@@ -298,10 +301,12 @@
 
                     </StackPanel>
 
-                    <StackPanel Name="panel_RemoteDbCaption" Grid.Row="0" Grid.Column="2" >
+                    <StackPanel Name="panel_RemoteDbCaption" Grid.Row="0" Grid.Column="2" Orientation="Horizontal" >
                         <Label Content="Remote Database" HorizontalAlignment="Center" 
                        FontSize="14" FontWeight="Medium" Foreground="#FF487DA2"
                        VerticalAlignment="Center"  />
+                        <TextBox Text="{Binding remoteDbNumberOfRecords }" ToolTip="Number of inserted records" IsReadOnly="True"
+                                 HorizontalContentAlignment="Center" FontSize="14" Width="Auto" Height="22" Margin="10,0,0,0"/>
                     </StackPanel>
                 </Grid>
 
@@ -457,7 +462,7 @@
                     </DataGrid.Columns>
                 </DataGrid>
 
-                <Border Style="{StaticResource st_border}" Margin="0,4,0,0" BorderThickness="1" Height="28" >
+                <Border Style="{StaticResource st_border}" Margin="0,4,0,0" BorderThickness="1" Height="Auto" >
 
                         <Grid Width="auto" Height="Auto">
                             <Grid.RowDefinitions>
